# rust-mp3-player

./: .gitignore  Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint  arrowButton.slint  controlPanel.slint  ellipsisText.slint  extraControlPanel.slint  nextButton.slint  onlyPlayButton.slint  openFolder.slint  pauseButton.slint  playButton.slint  prevButton.slint  progres.slint  sheetPanel.slint  stop.slint  toggleSwitch.slint  volumeMinus.slint  volumeMute.slint  volumeUp.slint
