[package]
name = "slint-temp"
version = "0.1.0"
authors = ["Vlad Kovaliov <v.v.kovaliov@gmail.com>"]
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.14.1"
slint = "1.6"
rodio = "0.19"
mp3-duration = "0.1.10"
id3 = "1.14.0"
base64 = "0.22.1"

[build-dependencies]
slint-build = "1.6"
